# common

./: 16 guard  2026Jan6th-flattenobject.ts  2dec7th-colors.ts  A-NOV12-converterexcel.ts  ASep19-dynamicFormItem.ts  Aug20SQL.ts  DEC1 handsontable-css  DEC6TH-C0LORING.TS  Database_Schema_Review_Report.docx  DictHelper  Drawercomponent.ts  Edit quote from Internal review..txt  JUNE10DBSCHEMA.TS  May8thAddQuotetxtfileseqeunce-may8th  NEWSEPT27-DRWARER.COMPONTE.TS  NOV20-INLINEMENU.TS  NOV21-2 apps ANGULARguard.ts  NOV21-MENUTEM.ts  anov15angularexampleExcel.ts  apicustomerProcessupload.ts  aug28transfor.ts  aug4thmenuitem.ts  aug8createsecet.yn  aug8th emailException.ts  aug8thSample.thml  aug9-requesthistory.ts  august7emailNotification.ts  baseline quote models.txt  cleo.sql  config.ts  create codstmodel MAY8TH  customer-selection custom.ts  customertypeGuard.ts  dateconverter.ts  dateval.ts  dateworkweekligi.ts  dchem.txt  dec21randomexampleexcel.ts  devops1.yaml  dockerfiex  (+62 more)
devops/: 1stWFW.ts
mini-adk-backend/: README.md  pyproject.toml
mini-adk-backend/app/: main.py
mini-adk-backend/app/api/: agents.py  chat.py
mini-adk-backend/app/core/: settings.py
mini-adk-backend/app/llm/: providers.py
mini-adk-backend/app/models/: chat.py  config.py
mini-adk-backend/app/registry/: in_memory.py
mini-adk-backend/app/runtime/: agent_runtime.py  mcp_client_manager.py
mini-adk-backend/app/security/: user_context.py
mini-adk-backend/mcp_servers/: demo_server.py
mini-adk-frontend/frontend/: angular.json  package.json  (+1 more)
templates/: emailTemplate.html  thy.html
(+10 files in other folders)
